[package]
name = "reing_print_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnus = "0.3.2"
reing_text2image = { git = "https://github.com/genya0407/reing_text2image", tag = "v1.0.4" }
image = "*"

[lib]
crate-type = ["cdylib"]
